feat: bring support for v4 api
Following https://gravitee.atlassian.net/browse/APIM-2502

BREAKING CHANGE: requires gravitee gateway version to be at least 4.0.0